--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Title: Access Data from the Public Security Institute of the State of Rio de Jan
 Version: 1.0
 Authors@R: 
     person("Igor", "Laltuf", , "igorlaltuf@gmail.com", role = c("aut", "cre"),
-           comment = c(ORCID = '<https://orcid.org/0000-0002-5614-4404>'))
-Description: Allows access to data from the Rio de Janeiro Public Security Institute (ISP), such as criminal statistics, data on gun seizures and femicide. The package makes it easy to import the data into R.
+           comment = c(ORCID = "0000-0002-5614-4404"))
+Description: Allows access to data from the Rio de Janeiro Public Security Institute (ISP), such as criminal statistics, data on gun seizures and femicide. The package makes it easy to import the data into R.<https://www.ispdados.rj.gov.br/>.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
