--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,10 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 LazyData: true
-LazyDataCompression:xz
+LazyDataCompression: xz
 Imports: 
     dplyr,
     janitor,
     openxlsx,
-    readr
+    readr,
+    sf
