--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Authors@R: c(
     person("Instituto de Segurança Pública", role = c("aut", "cph")))
 Description: Allows access to data from the Rio de Janeiro Public Security Institute (ISP), such as criminal statistics, data on gun seizures and femicide. The package also contains the spatial data of Pacifying Police Units (UPPs) and Integrated Public Safety Regions, Areas and Circumscriptions. 
 License: MIT + file LICENSE
-Depends: R (>= 2.10)
+Depends: 
+    R (>= 2.10)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
@@ -20,4 +21,5 @@ Imports:
     dplyr,
     janitor,
     openxlsx,
-    readr
+    readr,
+    sf
