--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ispdata
 Title: Access Data from the Public Security Institute of the State of Rio De Janeiro 
-Version: 1.1
+Version: 1.1.1
 Authors@R: c(
     person("Igor", "Laltuf", , "igorlaltuf@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "https://orcid.org/0000-0002-5614-4404")),
@@ -18,6 +18,7 @@ Config/testthat/edition: 3
 LazyData: true
 LazyDataCompression: xz
 Imports: 
+    curl,
     dplyr,
     janitor,
     openxlsx,
